--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@types/react": "18.3.2",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.19",
-    "eslint": "9.2.0",
     "eslint-config-next": "14.2.3",
     "next": "14.2.3",
     "postcss": "8.4.38",
@@ -21,5 +20,12 @@
     "react-dom": "18.3.1",
     "tailwindcss": "3.4.3",
     "typescript": "5.4.5"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.2.0",
+    "eslint": "9.2.0",
+    "eslint-plugin-react": "^7.34.1",
+    "globals": "^15.2.0",
+    "typescript-eslint": "^7.9.0"
   }
 }
